<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout9"
        android:layout_width="380dp"
        android:layout_height="91dp"
        android:layout_marginBottom="4dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btBorrador"
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:layout_weight="1"
            android:backgroundTint="#484949"
            android:onClick="borrador"
            android:text="@string/borrar"
            android:textSize="34sp" />

        <Space
            android:layout_width="2dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btSigno"
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:layout_weight="1"
            android:backgroundTint="#484949"
            android:onClick="cambiarSigno"
            android:text="@string/cambiarsigno"
            android:textSize="34sp" />

        <Space
            android:layout_width="2dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btPorcentaje"
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:layout_weight="1"
            android:backgroundTint="#484949"
            android:text="@string/porcentaje"
            android:textSize="34sp" />

        <Space
            android:layout_width="2dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btDivision"
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:layout_weight="1"
            android:backgroundTint="#0E5170"
            android:onClick="division"
            android:text="@string/division"
            android:textSize="34sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="380dp"
        android:layout_height="91dp"
        android:layout_marginBottom="4dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btSiete"
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:layout_weight="1"
            android:backgroundTint="#7E7E7E"
            android:onClick="escribeSiete"
            android:text="@string/siete"
            android:textSize="34sp" />

        <Space
            android:layout_width="2dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btOcho"
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:layout_weight="1"
            android:backgroundTint="#7E7E7E"
            android:onClick="escribeOcho"
            android:text="@string/ocho"
            android:textSize="34sp" />

        <Space
            android:layout_width="2dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btNueve"
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:layout_weight="1"
            android:backgroundTint="#7E7E7E"
            android:onClick="escribeNueve"
            android:text="@string/nueve"
            android:textSize="34sp" />

        <Space
            android:layout_width="2dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btMulti"
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:layout_weight="1"
            android:backgroundTint="#0E5170"
            android:onClick="multiplicacion"
            android:text="@string/multiplicacion"
            android:textSize="34sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="380dp"
        android:layout_height="91dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btCuatro"
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:layout_weight="1"
            android:backgroundTint="#7E7E7E"
            android:onClick="escribeCuatro"
            android:text="@string/cuatro"
            android:textSize="34sp" />

        <Space
            android:layout_width="2dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btCinco"
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:layout_weight="1"
            android:backgroundTint="#7E7E7E"
            android:onClick="escribeCinco"
            android:text="@string/cinco"
            android:textSize="34sp" />

        <Space
            android:layout_width="2dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btSeis"
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:layout_weight="1"
            android:backgroundTint="#7E7E7E"
            android:onClick="escribeSeis"
            android:text="@string/seis"
            android:textSize="34sp" />

        <Space
            android:layout_width="2dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btMenos"
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:layout_weight="1"
            android:backgroundTint="#0E5170"
            android:onClick="menos"
            android:text="@string/menos"
            android:textSize="34sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="380dp"
        android:layout_height="91dp"
        android:layout_marginBottom="28dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btCero"
            android:layout_width="190dp"
            android:layout_height="90dp"
            android:layout_weight="1"
            android:backgroundTint="#7E7E7E"
            android:onClick="escribeCero"
            android:text="@string/cero"
            android:textSize="34sp" />

        <Space
            android:layout_width="5dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btPunto"
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:layout_weight="1"
            android:backgroundTint="#7E7E7E"
            android:onClick="escribePunto"
            android:text="@string/punto"
            android:textSize="34sp" />

        <Space
            android:layout_width="5dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btIgual"
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:layout_weight="1"
            android:backgroundTint="#0E5170"
            android:onClick="igual"
            android:text="@string/igual"
            android:textSize="34sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout8"
        android:layout_width="380dp"
        android:layout_height="91dp"
        android:layout_marginBottom="4dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btUno"
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:layout_weight="1"
            android:backgroundTint="#7E7E7E"
            android:onClick="escribeUno"
            android:text="@string/uno"
            android:textSize="34sp" />

        <Space
            android:layout_width="2dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btDos"
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:layout_weight="1"
            android:backgroundTint="#7E7E7E"
            android:onClick="escribeDos"
            android:text="@string/dos"
            android:textSize="34sp" />

        <Space
            android:layout_width="2dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btTres"
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:layout_weight="1"
            android:backgroundTint="#7E7E7E"
            android:onClick="escribeTres"
            android:text="@string/tres"
            android:textSize="34sp" />

        <Space
            android:layout_width="2dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btMas"
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:layout_weight="1"
            android:backgroundTint="#0E5170"
            android:onClick="suma"
            android:text="@string/mas"
            android:textSize="34sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/txtResultado"
        android:layout_width="398dp"
        android:layout_height="107dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/campoEscritura"
        android:lineSpacingExtra="8sp"
        android:textAlignment="viewEnd"
        android:textSize="96sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout9"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/txtResultado2"
        android:layout_width="320dp"
        android:layout_height="113dp"
        android:lineSpacingExtra="8sp"
        android:textAlignment="viewEnd"
        android:textSize="96sp"
        app:layout_constraintBottom_toTopOf="@+id/txtResultado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.912"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtSignoOp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="@+id/txtResultado2"
        app:layout_constraintEnd_toStartOf="@+id/txtResultado2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtResultado2" />

</androidx.constraintlayout.widget.ConstraintLayout>